# ember-rs

./: .envrc  Cargo.toml  LICENSE  README.md
.github/workflows/: cd.yml
src/: fsm.rs  main.rs  mug.rs  tui.rs  ui.rs
