[package]
name = "ember-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.88"
btleplug = "0.11.5"
futures = "0.3.30"
tokio = { version = "1.40.0", features = ["full"] }
uom = "0.36.0"
